<resources>
    <string name="app_name">Day10</string>
    <string name="warung_makan_berkah">Warung Makan Berkah</string>
    <string name="menu_makanan">Menu Makanan</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="mie_goreng">Mie Goreng</string>
    <string name="mie_rebus">Mie Rebus</string>
    <string name="nasi_uduk">Nasi Uduk</string>
    <string name="menu_minuman">Menu Minuman</string>
    <string name="teh_es">Teh Es</string>
    <string name="es_jeruk">Es Jeruk</string>
    <string name="jumlah_porsi">Jumlah Porsi</string>
    <string name="masukkan_jumlah_porsi">Masukkan Jumlah Porsi</string>
    <string name="pesan">Pesan</string>
    <string name="menu">Menu</string>
    <string name="total_harga">Total Harga</string>
</resources>