<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:textSize="25sp"
        android:padding="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/warung_makan_berkah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menumakan"
        android:text="@string/menu_makanan"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/makan"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbNasiGoreng"
            android:text="@string/nasi_goreng"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbMieRebus"
            android:text="@string/mie_rebus"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbMieGoreng"
            android:text="@string/mie_goreng"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbNasiUduk"
            android:text="@string/nasi_uduk"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:id="@+id/menuminum"
        android:text="@string/menu_minuman"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:typeface="serif"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/minum"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTehEs"
            android:text="@string/teh_es"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbEsJeruk"
            android:text="@string/es_jeruk"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:id="@+id/jmlporsi"
        android:text="@string/jumlah_porsi"
        android:typeface="serif"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/porsi"
            android:hint="@string/masukkan_jumlah_porsi" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnpesan"
        android:text="@string/pesan"
        android:layout_marginLeft="145dp"
        android:layout_marginRight="145dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

